--- a/src/themes/label.scss
+++ b/src/themes/label.scss
@@ -153,11 +153,17 @@ html {
 		font-size: 16px;
 		line-height: 19px;
 		font-weight: $regular;
+		@media screen and (max-width: 500px) {
+			font-size: 14px;
+		}
 	}
 	&.customFour {
 		font-size: 16px;
 		line-height: 19px;
 		font-weight: $semiBold;
+		@media screen and (max-width: 500px) {
+			font-size: 14px;
+		}
 	}
 	&.customFive {
 		font-size: 20px;
@@ -249,6 +255,19 @@ html {
 		font-size: 35px;
 		line-height: 19px;
 		font-weight: $regular;
+	}
+	&.customTwentyThree {
+		font-size: 20px;
+		line-height: 24px;
+		font-family: Montserrat;
+		font-weight: 500;
+		font-style: normal;
+		@media screen and (max-width: 500px) {
+			font-size: 14px;
+		}
+		@media screen and (max-width: 370px) {
+			font-size: 10px;
+		}
 	}
 	&.itineraryCustomOne {
 		font-size: 16px;
